# embassy-stm32-template

./: .clippy.toml  .gitignore  Cargo.toml  LICENSE-BSD-2-Clause  LICENSE-BSD-3-Clause  LICENSE-CC0-1.0  LICENSE-LGPL-2.1  LICENSE-LGPL-3.0  LICENSE-MIT  LICENSE-MPL-2.0  README.md  build.rs  cargo-generate.toml  justfile  post-script.rhai  pre-script.rhai  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/scripts/: check-chips.py
.github/workflows/: ci.yml
ci-template/workflows/: rust.yml
src/: main.rs
tests/: example_test.rs
