[package]
edition = "2024"
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
license = "MIT OR Apache-2.0"
resolver = "2"

[[bin]]
name = "{{project-name}}"
test = false
bench = false

[dependencies]
defmt = "1.1"
defmt-rtt = "1.2"
panic-probe = { version = "1.0", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.7"
embedded-io-async = "0.7"
embedded-storage = "0.3.1"
cortex-m-rt = "0.7.5"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }

embassy-executor = { version = "0.10", features = ["platform-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-sync = { version = "0.8" }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-stm32 = { version = "0.6", features = ["defmt", "{{ chip }}", "unstable-pac", "memory-x", "time-driver-any"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
